* Fixed an issue with unicode characters not displaying correctly on the EEROMS partition (CN, JP, etc)
* Added SuperTux and SuperTuxKart to ports
* Fix SonicCD Gamepad for the OGS
* Fix Pico-8 disappearing splore file
* Added Imagemagick (mainly for screenshot manipulation from CLI)
* Bump PPSSPPSDL to v1.11
* Bump Duckstation to abb7631
* Fix Scummvm game scan


# 4.0    

Yes its finally here :) 

The change log is HUGE so I am just going to focus on the most important parts (and the ones I can remember):

* EmuELEC is no longer 32bit, it has now moved to AARCH64 (With some small parts still being 32 bit, like PCSX_Rearmed and Parallel64)
* A brand new default theme made specifically for EmuELEC! Crystal! https://github.com/dm2912/Crystal
* For easy access with any computer a third partition (EEROMS) will now be created on the first boot as FAT32, which is where all the ROMS will be stored.
* Update folder is now located in EEROMS/.update in case you want to copy the update files directly, its also still accesible from the samba share
* S912 (Including most Pandora) will no longer be supported, if you have one of those 3.9 is the latest version 
* Most save states are now in one folder (/storage/roms/savestates/[system] or EEROMS/savestates/[system]) I might have missed a few of the standalone emulators, but if you find any issues with that, please let me know, please make sure you move them there if you plan to keep using your old ones
* Introduced ee_defaults.txt https://github.com/EmuELEC/EmuELEC/commit/9358efe01af501326526ce479ca6c5f55932e34a
* Switch all error messages and scripts to use [TvTextViewer](https://github.com/lethal-guitar/TvTextViewer), also improve how these are displayed
* New emulator/cores added Dosbox-pure, Solarus, Tic-80, Mesen, DosBox-Staging, DosBox-X and others
* Dolphin has been added to the Amlogic-ng devices, but it is only really playable on S922x devices and gamepad stills needs to be set manually. Will fix this on v4.1