@@ -14,6 +14,7 @@ EmuELEC CHANGELOG
 * Bump PPSSPPSDL to v1.11
 * Bump Duckstation to abb7631
 * Fix Scummvm game scan
+* Fix brightness not restored after reboot on OGA/S, thanks to @miwasp, fixes issue #470
 
 
 # 4.0    
